# Vehicle-Fraud-Claim-Detection-and-Risk-Assessment-With-Gen-AI

./: README.md  pyproject.toml  requirements.txt  run_api.py  setup.py
Sample_claims/: claim1.csv
data/hitl/: review_queue.csv
data/results/: result_T1001.json  result_noid_1763652386.json  result_noid_1763678121.json  result_noid_1763678216.json  result_noid_1763678293.json  result_noid_1763678347.json  result_noid_1763678625.json  result_noid_1763679068.json  result_noid_1763683865.json  result_noid_1763729107.json  result_noid_1763729610.json  results_summary.csv
fraud_detection/configs/: app.yaml  model.yaml  ocr.yaml  rules.yaml
fraud_detection/decision_engine/: explainability.py  rules.py  scoring.py
fraud_detection/enrichment/: external_lookup.py
fraud_detection/extraction/: ocr_extractor.py  text_extractor.py  unified_extractor.py
fraud_detection/features/: feature_builder.py  similarity_index.py
fraud_detection/generative_ai/: embedder.py  explanation_generator.py
fraud_detection/hitl/: feedback_processor.py  review_queue.py
fraud_detection/ingestion/: api_ingest.py  csv_ingest.py  file_router.py  file_saver.py
fraud_detection/logging/: logger.py  logging_config.yaml
fraud_detection/models/: anomaly_detector.py  fraud_classifier.py  model_utils.py
fraud_detection/orchestration/: pipeline_runner.py
fraud_detection/preprocessing/: field_normalizer.py  schema_validator.py  text_cleaner.py
fraud_detection/schemas/: claim_schema.py  sanitizers.py
fraud_detection/serving/: api_server.py
ui/: reviewer_app.py
(+2 files in other folders)
