[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "fraud-detection-genai"
version = "0.1.0"
description = "AI-based vehicle insurance fraud detection & risk scoring system"
authors = [
    { name = "Mukesh Kumar", email = "chaharmukesh518@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
    "xgboost",
    "sentence-transformers",
    "faiss-cpu",
    "pillow",
    "pytesseract",
    "pdf2image",
    "PyPDF2",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "streamlit",
    "python-dateutil",
    "pyyaml",
    "opencv-python",
    "pydantic>=2.0",
    "requests",
    "tqdm"
]


[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]


[tool.setuptools.packages.find]
where = ["."]
include = ["fraud_detection*"]


[project.scripts]
run-api = "run_api:main"
run-ui = "ui.reviewer_app:main"
